plugins {
    id 'dev.architectury.loom' version '1.9-SNAPSHOT'
    id 'architectury-plugin' version '3.4-SNAPSHOT'
    id 'maven-publish'
}

group = project.maven_group
version = project.mod_version

base {
    archivesName = project.archives_name
}

repositories {
    // Add NeoForged repository.
    maven {
        name = 'NeoForged'
        url = 'https://maven.neoforged.net/releases'
    }
    maven {
        name = "Modrinth"
        url = "https://api.modrinth.com/maven"
    }

    maven { url = "https://maven.createmod.net" } // Ponder, Flywheel

    maven { url = "https://maven.ithundxr.dev/snapshots" } // Registrate
    maven { url = "https://maven.blamejared.com" } // JEI, Vazkii's Mods
    maven { url = "https://maven.theillusivec4.top/" } // Curios API
    maven { url = "https://maven.squiddev.cc" } // CC: Tweaked
    maven { url = "https://www.cursemaven.com" }
    maven { url = "https://api.modrinth.com/maven" }
    maven { url = "https://maven.ftb.dev/releases" } // FTB Mods
    maven { url = "https://maven.architectury.dev" } // Arch API
    // NeoForge config api port, needed by ponder
    maven { url = "https://raw.githubusercontent.com/Fuzss/modresources/main/maven" }
    maven {
        url = "https://jm.gserv.me/repository/maven-public" // JourneyMap
        content {
            includeGroup "info.journeymap"
            includeGroup "mysticdrew"
        }
    }
    maven { url "https://chocolateminecraft.com/maven" } // Xaero
    maven {
        name = "Sinytra"
        url = uri("https://maven.su5ed.dev/releases")
    }
}

architectury {
    platformSetupLoomIde()
    forge()
}

loom {
    silentMojangMappingsLicense()
    accessWidenerPath = file("src/main/resources/vulkanmod.accesswidener")
    forge {
        convertAccessWideners = true
    }
}

project.ext.lwjglVersion = "3.3.3"
project.ext.jomlVersion = "1.10.4"
project.ext.winNatives = "natives-windows"
project.ext.linuxNatives = "natives-linux"
project.ext.macosNatives = "natives-macos"
project.ext.macosArmNatives = "natives-macos-arm64"

dependencies {
    minecraft "net.minecraft:minecraft:$project.minecraft_version"
    mappings loom.officialMojangMappings()
    forge "net.neoforged:forge:$project.minecraft_version-$project.neoforge_version"

    implementation("org.lwjgl:lwjgl-vulkan:$lwjglVersion")

	ext.includeNatives = { name ->
		implementation("$name:$lwjglVersion")
		implementation("$name:$lwjglVersion:$winNatives")
		runtimeOnly("$name:$lwjglVersion:$linuxNatives")
		runtimeOnly("$name:$lwjglVersion:$macosNatives")
		runtimeOnly("$name:$lwjglVersion:$macosArmNatives")
	}

	includeNatives("org.lwjgl:lwjgl-vma")
	includeNatives("org.lwjgl:lwjgl-shaderc")

	//MoltenVK
	implementation("org.lwjgl:lwjgl-vulkan:$lwjglVersion:$macosNatives")
	implementation("org.lwjgl:lwjgl-vulkan:$lwjglVersion:$macosArmNatives")

    //Mixin
    include(modImplementation("maven.modrinth:OCQ3MOnJ:gm0ADonY"))

    implementation(annotationProcessor("io.github.llamalad7:mixinextras-common:0.2.0"))
    implementation(include("io.github.llamalad7:mixinextras-forge:0.2.0"))

    //combat create

//    modApi("com.tterrag.registrate:Registrate:$registrate_version")
    /*modImplementation("dev.engine-room.flywheel:flywheel-neoforge-api-1.21.1:1.0.6")
    //modImplementation("net.createmod.ponder:ponder-neoforge:1.0.82+mc1.21.1")
   // modImplementation("maven.modrinth:create:6.0.10+mc1.21.1")*/


    //fabric loader
    compileOnly("dev.su5ed.sinytra:fabric-loader:$forge_fabric_loader_version")
    runtimeOnly("dev.su5ed.sinytra:fabric-loader:$forge_fabric_loader_version:full")

    //fabric api
    modImplementation "dev.su5ed.sinytra.fabric-api:fabric-api-base:0.4.32+ef105b4977"
    modImplementation "dev.su5ed.sinytra.fabric-api:fabric-resource-loader-v0:0.11.12+4b4151c077"
    modImplementation "dev.su5ed.sinytra.fabric-api:fabric-rendering-fluids-v1:3.0.29+4ac5e37a77"
    modImplementation "dev.su5ed.sinytra.fabric-api:fabric-renderer-api-v1:3.2.2+cf68abbe77"
    modImplementation "dev.su5ed.sinytra.fabric-api:fabric-rendering-v1:3.0.9+66e9a48f77"
    modImplementation "dev.su5ed.sinytra.fabric-api:fabric-rendering-data-attachment-v1:0.3.39+a6081afc77"
    modImplementation "dev.su5ed.sinytra.fabric-api:fabric-block-view-api-v2:1.0.3+53347ba977"
}

processResources {
    inputs.property 'version', project.version

    filesMatching('META-INF/neoforge.mods.toml') {
        expand version: inputs.properties.version
    }
}

java {
    // Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
    // if it is present.
    // If you remove this line, sources will not be generated.
    withSourcesJar()

    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
}

tasks.withType(JavaCompile).configureEach {
    it.options.release = 17
}

// Configure Maven publishing.
publishing {
    publications {
        mavenJava(MavenPublication) {
            from components.java
        }
    }

    // See https://docs.gradle.org/current/userguide/publishing_maven.html for information on how to set up publishing.
    repositories {
        // Add repositories to publish to here.
        // Notice: This block does NOT have the same function as the block in the top level.
        // The repositories here will be used for publishing your artifact, not for
        // retrieving dependencies.
    }
}
